# DS_project

./: Project_IS.ipynb  comment_summarizer.py  docker-compose.yml  dockerfile  is-kaggle.ipynb  maks.ipynb  maks_01.ipynb  maks_02.ipynb  maks_03.ipynb  max_model.ipynb  pyproject.toml  requirements.txt  toxic_albert_model_test_1.ipynb  toxic_albert_model_test_2.ipynb
alex_datasets_model/: toxic_albert_model_and_test_1.ipynb  toxic_albert_test_1.ipynb  toxic_albert_test_2.ipynb
alex_datasets_models/: toxic-albert-balanced.ipynb  toxic-albert-balanced_finish.ipynb
alex_datasets_models/project_final/: Dockerfile  docker-compose.yml  requirements.txt
alex_datasets_models/project_final/app_final/: app.py
alex_datasets_models/project_final/app_final/templates/: index.html
alex_datasets_models/toxic_albert_model_old/: config.json
app_final/: app.py  comment_summarizer.py
app_maks/: app.py  text_test.py
app_maks/templates/: index.html
test/: test_model.ipynb
