[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.45.2"
rake-nltk = "^1.0.6"
nltk = "^3.9.1"
sumy = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
